fix headers and INSTALL file
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@14 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/INSTALL
+++ b/INSTALL
@@ -2,16 +2,12 @@
 
 
 *** What you need ***
-- OCaml 3.09.0 or above installed
-- LablGtk 2.6.0 or above installed (with lablglade enabled)
-- XML-light 2 or above installed
-- Cameleon 1.9.13 or above installed (including native code libraries)
-- OCaml-MySQL 1.0.3 or above installed
+- OCaml 3.11.0 or above installed
+- R >= 2.9 with development libraries
 - make ;-)
 
 *** How to compile ***
-- ./configure [--prefix=/path/to/install]
-  By default, install all in /usr/local/bin
+- ./configure
 - make depend
 - make all [or only 'make byte' if the native code compiler is not installed]
 - make install
